-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0
-
Windows 8.1 x64.
qt 5.5.0.0. msvc-2013 x86 build
-
2ee34eddc08bfc8fa24f1b059c7f4425f83fe8f0
Build debug version of simple program.
Start app (not debugging it!) from Qt Creator.
When I connect to my QWebSocket server app crashed with trace:
[0701/232600:FATAL:origin.cc(16)] Check failed: origin[origin.size() - 1] != '/' (/ vs. /)
Backtrace:
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x127CB6D1+37995249]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x126BA5AF+36876751]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x11FFE119+29814073]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x12DCA3E5+44281861]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x12DFBC24+44484676]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x12EA9228+45194824]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x12DF9644+44474980]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x12E9CA54+45143668]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x12EC2440+45297760]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x10C5B201+9223713]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x10C5E088+9235624]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x109B7A8E+6457006]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x108AF0F6+5373206]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x108AF753+5374835]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x1388BB28+55560008]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x1388BAAE+55559886]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x13876263+55471747]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x138752DA+55467770]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x13889A1E+55551550]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x13889701+55550753]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x1387006B+55446667]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x127FB69C+38191804]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x127FB7BD+38192093]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x127F9942+38184290]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x127FB052+38190194]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x127FAFBC+38190044]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x126D1797+36971447]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x1270D306+37216038]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x126D164B+36971115]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x127357F6+37381142]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x10449BC4+763876]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x1044AD8B+768427]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x12736218+37383736]
QtWebEngineCore::URLRequestCustomJobDelegate::qt_static_metacall [0x1274DD0B+37480747]
BaseThreadInitThunk [0x74AC7C04+36]
RtlInitializeExceptionChain [0x76F7AD1F+143]
RtlInitializeExceptionChain [0x76F7ACEA+90]
qt 5.4.x - the error does not occur.
QWebView (qt 5.4.x/5.5.0)- the error does not occur.
Release version 5.5.0 - the error does not occur.
Debug version 5.5.0 with debugging - the error does not occur.
Only when executiong debug version program without debugging.
| For Gerrit Dashboard: QTBUG-46973 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 138299,2 | <chromium> Add support for qrc origins to url::Origin. | 40.0.2214-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
| 144450,3 | <chromium> Add support for qrc origins to url::Origin. | 45-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |