<chromium> Add support for qrc origins to url::Origin.

Change-Id: I2566cad6b36c3032206ee4e9e6b50491bfc8df1f
Task-number: QTBUG-46973
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@theqtcompany.com>